namespace Languageweek.Application.Model
{
    public enum Gender { Male = 1 , Female = 2 }
}